{
    "name": "playerInputSetting",
    "maps": [
        {
            "name": "playerActions",
            "id": "264ad0c1-d70f-466b-9e0a-0a8f60167060",
            "actions": [
                {
                    "name": "Moving",
                    "type": "PassThrough",
                    "id": "79744a68-d060-4257-af57-c5cc0efc3756",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SizeUp",
                    "type": "PassThrough",
                    "id": "d606ae1e-abc0-40d0-8203-b9c5c763d886",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SizeDown",
                    "type": "PassThrough",
                    "id": "1ebbb42b-22d2-4e98-ab6b-491d22833308",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovingUpDown",
                    "type": "PassThrough",
                    "id": "1b645d4c-0126-42d2-8f5a-741a1586ae85",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnGripL",
                    "type": "Value",
                    "id": "1687fb94-47a9-460f-96b8-b97fc910dbab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnTriggerL",
                    "type": "Value",
                    "id": "452315e3-0dbe-43ed-b312-cd55476b60fa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnMenuL",
                    "type": "Button",
                    "id": "cb8f289d-9871-4821-81ae-8b696cdf522f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnGripR",
                    "type": "Value",
                    "id": "202f0afb-a55c-4bd2-87c9-112f90408622",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnTriggerR",
                    "type": "Value",
                    "id": "0aca707a-b9df-4221-a9f4-5dd5f0fb8051",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnMenuR",
                    "type": "Button",
                    "id": "3534a07e-b227-43ea-a954-d23c7496bd45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a343cc7-b2f0-4d4f-a430-897ff33dc8cf",
                    "path": "<XRController>{RightHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23c88201-646a-4c6a-b1ee-542ec915fbb8",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "SizeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec6af3c4-f969-4d8d-b46e-f2c6c8a60839",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SizeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "340a4652-fbee-4004-8fb2-c4d348f540e4",
                    "path": "<XRController>{LeftHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovingUpDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7169ef6-50fd-4bde-9313-71901734f154",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnGripL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e8b2906-49d8-4bf8-8cd7-128d541cd3c7",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnTriggerL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e8b3d4f-8b0f-40cd-be0d-5c0cdad05d20",
                    "path": "<XRController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMenuL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4236f8f2-1db5-46e0-89be-f9e6834e8549",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnGripR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16db1bca-bbaa-4f7b-92c6-4593968d03a8",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnTriggerR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ab71296-e7d2-428a-b3bb-852f67e2e669",
                    "path": "<XRController>{RightHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMenuR",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ControllButton",
            "id": "2b0a1571-23ee-4d21-808f-558da4a999dc",
            "actions": [
                {
                    "name": "OnTriL",
                    "type": "Button",
                    "id": "f0911e72-9fb5-4894-a7b5-4ac4cb2131b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnTriR",
                    "type": "Button",
                    "id": "f6d1271f-8c02-4ac3-a18d-be9b0bc19ef9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnGripL",
                    "type": "Button",
                    "id": "609a3a3b-d72f-4dc8-bda1-602e3bd55b4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnGripR",
                    "type": "Button",
                    "id": "ae094d24-b62d-4a67-990f-0df216cc6549",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMenuL",
                    "type": "Button",
                    "id": "2f913087-df19-4781-a92e-ede5a96b47cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMenuR",
                    "type": "Button",
                    "id": "2321dcdd-973b-43ff-b2e2-6a9ac9f31a4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnJoyStickL",
                    "type": "Value",
                    "id": "618fba3c-899e-4a9d-a817-485372f091a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnJoyStickR",
                    "type": "Value",
                    "id": "de1488c6-5837-4192-b229-8127c6e97fc1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "430cc616-b066-4ac9-8869-b88cb227cc1a",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnTriL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "433829cb-1cb2-4326-aee9-97b4f808988b",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnTriR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "495c3f6b-d197-4fe4-b2f1-361c576b8400",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnGripL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60718af8-e5d4-446f-ba3f-d1fc20ca270e",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnGripR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cce42973-982b-4671-8262-030b391850e1",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "OnMenuL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a26f254-eb08-4ee9-ad8a-20287e770730",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMenuR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc6ddc07-071f-41e8-a53e-5e5e317841ce",
                    "path": "<XRController>{LeftHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnJoyStickL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "500f8a78-0f30-445e-9f4c-749f35d26d9b",
                    "path": "<XRController>{RightHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnJoyStickR",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}